<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".find.FindPwEditActivity">

    <ImageView
        android:id="@+id/iv_find_pw_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/close_black"
        app:layout_constraintBottom_toBottomOf="@+id/tv_find_pw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_find_pw" />

    <TextView
        android:id="@+id/tv_find_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/find_pw_top"
        android:textColor="@color/text_222"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_find_pw_save"
        style="@style/Medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/find_pw_save"
        android:textColor="@color/success"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_find_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_find_pw" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_find_pw">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/find_pw_edit"
            android:textColor="@color/text_222"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_pw"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_id"
            android:backgroundTint="@color/bg_f4"
            android:drawablePadding="24dp"
            android:hint="@string/find_pw_edit"
            android:paddingStart="16dp"
            android:textColorHint="@color/text_bbb"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/find_pw_edit_check"
            android:textColor="@color/text_222"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_pw_check"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_id"
            android:backgroundTint="@color/bg_f4"
            android:drawablePadding="24dp"
            android:hint="@string/find_pw_edit_check"
            android:paddingStart="16dp"
            android:textColorHint="@color/text_bbb"
            android:textSize="14sp" />

        <Button
            android:id="@+id/join_btn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_cancel"
            android:text="@string/find_pw_edit_cancel"
            android:textColor="@color/text_555"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/iv_phone_error" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>